feat: add bytebuddy bootstrap interceptor for jdk